trunk/Archive2/d6/f76f5104fc2871/output
main.cpp:1:1: error: expected unqualified-id before '<' token
 <!-- <script type="text/javascript">alert("I hope ace editor is reinforced against XSS...");</Script>
 ^
main.cpp:1:93: error: expected unqualified-id before '<' token
 <!-- <script type="text/javascript">alert("I hope ace editor is reinforced against XSS...");</Script>
                                                                                             ^
